--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                     <li class="menu-item current-menu-item menu-item-has-children"><a href="index.html">Главная</a>
                     </li>
                     <li class="menu-item"><a href="work.html">Галерея</a></li>
-                    <li class="menu-item"><a href="about-company.html">About</a></li>
-                    <li class="menu-item"><a href="our-services.html">О нас</a></li>
-                    <li class="menu-item"><a href="blog.html">Септика</a></li>
-                    <li class="menu-item"><a href="contact-us.html">Отзывы</a></li>
+                    <li class="menu-item"><a href="about-company.html">О нас</a></li>
+                    <li class="menu-item"><a href="our-services.html">Септика</a></li>
+                    <li class="menu-item"><a href="blog.html">Отзывы</a></li>
+                    <li class="menu-item"><a href="contact-us.html">Контакты</a></li>
                 </ul>
             </div>
         </div>
@@ -117,8 +117,14 @@
                                     </div>
                                     <div class="clear"></div>
                                     <div class="pego-columns pego-columns6 fl home-element2">
-                                        <h1 class="page-heading">Узнайте <span> О нас больше</span></h1>
-                                        <p class="page-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><a class="page-read-more-button" href="about-company.html">Читать</a></div>
+                                        <h1 class="page-heading">Почему выбирают <span>именно нас:</span></h1>
+                                        <p class="page-summary">Гарантия Высокго качества <br>
+                                            формирование цены без посредников; <br>
+                                            оперативный выезд на объект в удобное для заказчика время; <br>
+                                            консультации по выбору оптимального варианта в каждом конкретном случае; <br>
+                                            дополнительные услуги для организации полного подключения коммуникаций; <br>
+                                            собственная спецтехника в отличном состоянии.
+                                        </p></div>
                                     <div class="pego-columns pego-columns3 fl colorsheme3  home-element3a">
                                         <a class="col-link" href="#"><img width="315" height="290" src="upload/free-consulting.jpg" class="attachment-full size-full" alt="free-consulting" /></a>
                                     </div>
@@ -127,14 +133,14 @@
                                             <div class="page-vertical-alignment">
                                                 <div class="page-icon-wrapper">
                                                     <div class="page-icon pe-7s-users"></div>
-                                                    <h1 class="page-title">Бесплатная консультация</h1></div>
+                                                    <h1 class="page-title">Получить консультацию</h1></div>
                                             </div>
                                         </a>
                                     </div>
                                     <div class="clear"></div>
                                     <div class="pego-columns pego-columns3 fl home-element4"><img src="upload/services.jpg" class="image-services" alt="" />
                                         <div class="page-testimonails fl colorsheme2">
-                                            <h1 class="testimonial-title">Довольные <span>клиенты</span></h1>
+                                            <h1 class="testimonial-title">Отзывы о работе<span> «СПЕЦМОНТАЖ»</span></h1>
                                             <div class="owl-carousel owl-theme testimonials-wrapper">
                                                 <div class="item testimonials-wrapper">
                                                     <div class="testimonail-image-wrapper"><img class="testimonial-image" src="upload/testimonial-author2.jpg" alt="Joe Doe" />
@@ -143,8 +149,8 @@
                                                     <div class="clear"></div>
                                                     <div>
                                                         <div class="testimonial-quote">“</div>
-                                                        <div class="testimonial-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula egestas congue. Mauris enim felis, sollicitudin ut augue a.</div>
-                                                        <div class="testimonial-author">Joe Doe</div>
+                                                        <div class="testimonial-content">Ребята быстро приехали на объект и сделали все как положено. Позвонил, и уже через 3 дня пользовался скважиной. Отличная вода — я доволен! Благодарю за ответственное отношение. Рекомендую.</div>
+                                                        <div class="testimonial-author">Иван Владимирович</div>
                                                     </div>
                                                 </div>
                                                 <div class="item testimonials-wrapper">
@@ -154,8 +160,20 @@
                                                     <div class="clear"></div>
                                                     <div>
                                                         <div class="testimonial-quote">“</div>
-                                                        <div class="testimonial-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula egestas congue. Mauris enim felis, sollicitudin ut augue a, posuere vulputate orci. Quisque non imperdiet ante, eu gravida nisl.</div>
-                                                        <div class="testimonial-author">Lisa Smith</div>
+                                                        <div class="testimonial-content">Не думала, что так быстро все сделают. Еще и удалось сэкономить. В других компаниях все как-то размыто и непонятно, а здесь все четко и профессионально. Однозначно рекомендую «СПЕЦМОНТАЖ»!</div>
+                                                        <div class="testimonial-author">Ирина Васильевна Г.</div>
+                                                    </div>
+                                                </div>
+                                                <div class="item testimonials-wrapper">
+                                                    <div class="testimonail-image-wrapper"><img class="testimonial-image" src="upload/testimonial-author1.jpg" alt="Lisa Smith" />
+                                                        <div class="clear"></div>
+                                                    </div>
+                                                    <div class="clear"></div>
+                                                    <div>
+                                                        <div class="testimonial-quote">“</div>
+                                                        <div class="testimonial-content">Несколько раз пробовали забуриться другие организации, но так и не смогли «попасть в воду». То глубины не хватало, то грязная жидкость текла. Замучили меня. Друг посоветовал позвонить в «СПЕЦМОНТАЖ» и я не пожалел. С первого раза буквально за день все сделали. Отличный уровень — все бы так работали!
+                                                        </div>
+                                                        <div class="testimonial-author">Николай Петров</div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -179,8 +197,9 @@
                                     <div class="pego-columns pego-columns6 fl home-element6">
                                         <div class="owl-carousel owl-theme portfolio-wrapper">
                                             <div class="item">
-                                                <h1 class="portfolio-title"><span>Пробурим чистую воду в дом</span> За 2-3 дня</h1>
-                                                <p class="portfolio-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</p><img src="upload/folio121.jpg" class="portfolio-image" alt="&lt;span&gt;Colored&lt;/span&gt; interior design" /><a href="#" class="portfolio-read-more">Обсудить проект</a>
+                                                <h1 class="portfolio-title"><span>Услуги компании</span> «СПЕЦМОНТАЖ»</h1>
+                                                <p class="portfolio-summary">Профессиональное оборудование и опытные специалисты готовы выполнить проект любой сложности: от частной бытовой скважины до работ на промышленном предприятии. Компетенции сотрудников «СПЕЦМОНТАЖ» подтверждены более чем 1500 успешно выполненными работами на различных объектах. Наиболее востребованная услуга в Московской и Тверской  областях — бурение артезианской скважины. За относительно небольшую сумму заказчик получает неиссякаемый индивидуальный источник чистой воды без примесей. На данный сервис действует специальное предложение. Звоните прямо сейчас, чтобы узнать подробности!
+                                                </p><img src="upload/folio121.jpg" class="portfolio-image" alt="&lt;span&gt;Colored&lt;/span&gt; interior design" /><a href="#" class="portfolio-read-more">Посмотреть наши работы</a>
                                                 <div class="clear"></div>
                                             </div>
                                         </div>
