--- a/work.html
+++ b/work.html
@@ -82,8 +82,11 @@
 
         <div id="container">
             <!-- start container -->
+            <div class="work-text">
+                <p>В разделе галерея Вы найдете примеры выполненных нами работ на объектах различного уровня сложности. Оцените широкий спектр оказываемых услуг специалистами компании «СПЕЦМОНТАЖ»: от обычного бурения скважины до реализации крупного проекта по подключению коммуникаций «под ключ». В любом случае наши клиенты получают высокий уровень сервиса и бережное отношение к имуществу заказчика на период выполнения работ. Оцените нашу спецтехнику, которую отдел технического обслуживания держи в идеальном состоянии. Такое отношение к оборудованию позволяет держать качество на высоком уровне. Любые, даже самые амбициозные проекты по бурению скважин в в Московской и Тверской  областях будут реализованы точно в срок, если Вы обратитесь в компанию «СПЕЦМОНТАЖ». Будем рады добавить фотографию Вашего объекта после успешно выполненных работ в нашу галерею! Чтобы получить подробную информацию об оказываемых услугах, позвоните по телефону горячей линии прямо сейчас! Специалисты службы поддержки клиентов с удовольствием ответят на все интересующие Вас вопросы.</p>
+            </div>
             <div class="folio-view-wrapper">
-
+                <div class="work-text"></div>
                 <div class="pego-columns-auto-height  pego-columns6 fl folio-view isotope-item">
                     <div class="folio-view-item">
                         <a class="folio-view-thumb zoom" href="upload/folio121.jpg">
