--- a/contact-us.html
+++ b/contact-us.html
@@ -93,30 +93,30 @@
                                             <div class="page-icon-wrapper">
                                                 <div class="page-icon pe-7s-pin"></div>
                                                 <div class="contact-info-left">
-                                                    <p><strong>Constructy</strong></p>
-                                                    <p>274 Los Angeles</p>
-                                                    <p>California</p>
+                                                    <p><strong>«СПЕЦМОНТАЖ»</strong></p>
+                                                    <p>Москва</p>
+                                                    <p>Тверь</p>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="pego-columns-auto-height pego-columns6 fl contact-form-with-info2">
-                                        <h1 class="contact-form-title">Send us <span>message</span></h1>
+                                        <h1 class="contact-form-title">Оставьте нам <span>Сообщение</span></h1>
                                         <p class="contact-form-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi elementum purus vitae velit rutrum tristique. Duis ac orci sit amet risus vestibulum lobortis. </p>
                                         <div role="form" class="wpcf7" id="wpcf7-f151-p155-o1" lang="en-US" dir="ltr">
                                             <div class="screen-reader-response"></div>
                                             <form id="contact-form" action="#">
 
                                                 <p class="name-p"><span class="wpcf7-form-control-wrap your-name">
-                                                    <input name="name" id="name" type="text" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Name *" /></span> </p>
+                                                    <input name="name" id="name" type="text" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Имя *" /></span> </p>
                                                 <p class="email-p"><span class="wpcf7-form-control-wrap your-email">
-                                                    <input name="mail" id="mail" type="text"  value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="Email *" /></span> </p>
+                                                    <input name="mail" id="mail" type="text"  value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="Почта *" /></span> </p>
                                                 <p class="subject-p"><span class="wpcf7-form-control-wrap your-subject">
-                                                    <input name="subject" id="subject" type="text"  value="" size="40" class="wpcf7-form-control wpcf7-text" aria-invalid="false" placeholder="Subject" /></span> </p>
+                                                    <input name="subject" id="subject" type="text"  value="" size="40" class="wpcf7-form-control wpcf7-text" aria-invalid="false" placeholder="Тема" /></span> </p>
                                                 <p class="message-p"><span class="wpcf7-form-control-wrap your-message">
-                                                    <textarea name="comment" id="comment"  cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false" placeholder="Message"></textarea></span> </p>
+                                                    <textarea name="comment" id="comment"  cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false" placeholder="Ваше сообщение"></textarea></span> </p>
                                                 <p class="send-button-paragraph">
-                                                    <input type="submit" value="Send Message"  id="submit_contact">
+                                                    <input type="submit" value="Отправить Сообщение"  id="submit_contact">
                                                     <div id="msg" class="message"></div>
                                                 <p></p>
                                             </form>
