--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="format-detection" content="telephone=no" />
 
     <!-- Favicon Icon -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-ico" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="images/favicon.png" type="image/x-ico" />
 
 
     <link rel='stylesheet' href='css/layerslider.css' type='text/css' media='all' />
