--- a/our-services.html
+++ b/our-services.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 
-    <title>CONSTRUCTY - Construction Business Building Theme</title>
+    <title>СпецМонтаж</title>
 
     <!-- for mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="format-detection" content="telephone=no" />
 
     <!-- Favicon Icon -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-ico" />
+        <link rel="shortcut icon" href="images/favicon.png" type="image/vnd.microsoft.icon" />
+
+    <link rel="icon" href="images/favicon.png" type="image/x-ico" />
 
 
     <link rel='stylesheet' href='css/layerslider.css' type='text/css' media='all' />
